--- a/Model_Develpment_Coding_Main.ipynb
+++ b/Model_Develpment_Coding_Main.ipynb
@@ -259,6 +259,54 @@
     "b2_m = model3.params['SN-554']\n",
     "print(f\"Multiple Regression: SN-509 = {b0_m:.4f} + {b1_m:.4f} * SN-544 + {b2_m:.4f} * SN-554\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b47b565c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute combined model predictions and residuals\n",
+    "X_test_multi = sm.add_constant(test_df[['SN-544', 'SN-554']])\n",
+    "test_df['pred_multi'] = model3.predict(X_test_multi)\n",
+    "test_df['residuals'] = test_df['pred_multi'] - test_df['SN-509']  # predicted - actual\n",
+    "\n",
+    "# --- Scatter plots of residuals vs predictors ---\n",
+    "plt.figure(figsize=(16,6))\n",
+    "\n",
+    "# Residual scatter: SN-544\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.scatter(test_df['SN-544'], test_df['residuals'], color='purple', alpha=0.7)\n",
+    "plt.axhline(0, color='black', linestyle='--', linewidth=2)\n",
+    "plt.xlabel('SN-544')\n",
+    "plt.ylabel('Predicted - Actual')\n",
+    "plt.title('Residuals vs SN-544 (Predicted - Actual)')\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Residual scatter: SN-554\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.scatter(test_df['SN-554'], test_df['residuals'], color='darkorange', alpha=0.7)\n",
+    "plt.axhline(0, color='black', linestyle='--', linewidth=2)\n",
+    "plt.xlabel('SN-554')\n",
+    "plt.ylabel('Predicted - Actual')\n",
+    "plt.title('Residuals vs SN-554 (Predicted - Actual)')\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# --- Boxplots of predicted - actual for both predictors ---\n",
+    "plt.figure(figsize=(10,6))\n",
+    "residual_data = [\n",
+    "    test_df['residuals'],  # predicted - actual (combined for both)\n",
+    "]\n",
+    "plt.boxplot(residual_data, labels=['Predicted - Actual (Test Set)'])\n",
+    "plt.ylabel('Predicted - Actual')\n",
+    "plt.title('Prediction Error Distribution (Test Set, Combined Model)')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
